# mcp-server-vegalite-viewer

./: .gitignore  .mcpbignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manifest.json  mcp.json  pyproject.toml
.claude/: settings.local.json
src/mcp_server_vegalite_viewer/: __init__.py  __main__.py  mcp_server.py  viewer_manager.py  web_browser.py  web_server.py
src/mcp_server_vegalite_viewer/resources/: __init__.py  sample-visualization-spec.json  viewer.html
