[project]
name = "mcp-server-vegalite-viewer"
dynamic = ["version"]
description = "A simple data visualization MCP server and viewer web application using Vega-Lite and Uvicorn."
readme = "README.md"
authors = [
    { name = "Stephan Eberle", email = "stephaneberle9@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "psutil"
]

[dependency-groups]
dev = [
    "ty",
    "pre-commit>=4.3.0",
    "ruff",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
mcp-server-vegalite-viewer = "mcp_server_vegalite_viewer.__main__:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
sources = ["src"]
exclude = [
  "*.log"
]

[tool.hatch.build.targets.sdist]
sources = ["src"]
exclude = [
  "*.log",
  ".venv/"
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001", "RUF013"]
# allow imports not at the top of the file
"src/mcp_server_mango_research_dashboard/__init__.py" = ["E402"]

[tool.codespell]
skip = "*.lock,pyproject.toml,*PythonImportHelper*"
